tests/functional/lang/eval-fail-derivationStrict-6.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-derivationStrict-6.nix:1:1:
            1| builtins.derivationStrict {
             | ^
            2|   name = "foo";

       … while evaluating derivation 'foo'
         whose name attribute is located at /pwd/lang/eval-fail-derivationStrict-6.nix:2:3

       … while evaluating the `__ignoreNulls` attribute passed to builtins.derivationStrict

       error: expected a Boolean but found an integer: 15
